Add example code, remove dependency installation

--- a/action.yml
+++ b/action.yml
@@ -24,28 +24,18 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install Python dependencies
-      run: |
-        echo "::group::Installing Python dependencies"
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-
-        if [ ${{ inputs.job_summary }} = true ]; then pip install pytest-md; fi
-        if [ ${{ inputs.emoji }} = true ]; then pip install pytest-emoji; fi
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        echo "::endgroup::"
-      shell: bash
     - name: Run pytest
       run: |
         args=()
         if [ ${{ inputs.verbose }} = true ]; then args+=('-v'); fi
         if [ ${{ inputs.job_summary }} = true ]; then args+=('--md=report.md'); fi
         if [ ${{ inputs.emoji }} = true ]; then args+=('--emoji'); fi
-        args+=("${{ inputs.custom_arguments }}")
+        # unpack custom arguments from spaces to array
+        args+=(`echo "${{ inputs.custom_arguments }}"`)
         echo "::group::Run pytest ${args[@]}"
         pytest "${args[@]}"
         echo "::endgroup::"
-      shell: bash
+      shell: bash -el {0}  # use login shell to source .bashrc for environments
     - name: Add report to summary
       # run even if pytest fails
       if: always() && inputs.job_summary == 'true'
