--- a/action.yml
+++ b/action.yml
@@ -38,24 +38,33 @@ runs:
   steps:
     - name: Run pytest
       run: |
+        echo "::group::..."
         args=()
         if [ ${{ inputs.verbose }} = true ]; then args+=('-v'); fi
         if [ ${{ inputs.job-summary }} = true ]; then args+=('--md=report.md'); fi
         if [ ${{ inputs.emoji }} = true ]; then args+=('--emoji'); fi
         # unpack custom arguments from spaces to array
         args+=(`echo "${{ inputs.custom-arguments }}"`)
-        echo "::group::Run pytest ${args[@]}"
-        ${{ inputs.custom-pytest }} "${args[@]}"
         echo "::endgroup::"
+        ${{ inputs.custom-pytest }} "${args[@]}"
       shell: bash -el {0}  # use login shell to source .bashrc for environments
     - name: Add report to summary
       # run even if pytest fails
       if: always() && inputs.job-summary == 'true'
       run: |
-        sed -i 's/# Test Report/# ${{ inputs.report-title }}/' report.md
+        echo "::group::..."
+        echo "# ${{ inputs.report-title }}" > final_report.md
         if [ ${{ inputs.click-to-expand }} = true ]; then
-          sed -i '2i <details><summary>Click to expand!</summary>' report.md
-          sed -i '$a</details>' report.md
+          echo "<details><summary>Click to expand!</summary>" >> final_report.md
         fi
-        cat report.md >> $GITHUB_STEP_SUMMARY
+        tail -n+2 report.md >> final_report.md
+        if [ ${{ inputs.click-to-expand }} = true ]; then
+          echo "</details>" >> final_report.md
+        fi
+        cat final_report.md >> $GITHUB_STEP_SUMMARY
+        echo "::endgroup::"
+        echo
+        echo "====================================================================================="
+        echo Markdown summaries: "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+        echo "====================================================================================="
       shell: bash
