--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,9 +37,11 @@ jobs:
 
     - name: Install dependencies
       run: |
+        set -x
         python3 -m pip install --upgrade pip
         pip3 install pytest pytest-emoji
-        if [ -f requirements.txt ]; then pip3 install -r requirements.txt; fi
+        # if [ -f requirements.txt ]; then pip3 install -r requirements.txt; fi
+        which pytest
 
     - name: Test code with pytest
       uses: pavelzw/pytest-action@v2
