--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         set -x
         python3 -m pip install --upgrade pip
-        pip3 install pytest pytest-emoji
+        pip3 install pytest pytest-emoji pytest-md
         # if [ -f requirements.txt ]; then pip3 install -r requirements.txt; fi
         which pytest
 
